[package]
name = "touch_button_panel"
version = "0.1.0"
authors = ["Sven Friedrich <friedrich122112@googlemail.com>"]
edition = "2018"

[dependencies]
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f401", "usb_fs"] }
cortex-m = "0.6.3"
cortex-m-rt = { version = "0.6.12", features = ["device"] }
panic-halt = "0.2.0"
cortex-m-rtic = "0.5.5"
embedded-hal = "0.2.4"
usb-device = "0.2.5"
at42qt1070 = "0.1.1"
nb = "1.0.0"
panic-semihosting = "0.5.3"