[package]
name = "touch_button_panel"
version = "0.1.0"
authors = ["Sven Friedrich <friedrich122112@googlemail.com>"]
edition = "2018"

[dependencies]
stm32f4xx-hal = { version = "0.9.0", features = ["rt", "stm32f401", "usb_fs"] }
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
panic-halt = "0.2.0"
cortex-m-rtic = "0.5.6"
embedded-hal = "0.2.4"
usb-device = "0.2.8"
nb = "1.0.0"
panic-semihosting = "0.5.3"
arrayvec = { version = "0.7.0", default-features = false }
vl53l0x = {path = "../vl53l0x"}
rtt-target = { version = "*", features = ["cortex-m"], optional = true }

[dependencies.shared-bus-rtic]
git = "https://github.com/ryan-summers/shared-bus-rtic"
features = []

[features]
default = [ "rtt" ]
rtt = [ "rtt-target" ]